feat(flow): Support functional nodes and optimize the flow engine
- Added support for Function type `funNode`
- Optimized the structure of `FlowEngine` and `FlowInstance` classes
- Improved the creation logic of `ContextBus` to support Map and object type parameters
- Updated `FlowNodeManager` to support conversion from results to conditions
- Refactored the execution logic of `FlowNodeStructure` to support functional nodes
- Optimized the `FlowUtil` utility class by adding methods for object type checks
- Updated the `Info` class to support the construction of functional nodes
- Modified the configuration file to include configuration for result-to-condition types